--- a/pages/read_delimited.qmd
+++ b/pages/read_delimited.qmd
@@ -11,6 +11,33 @@ Load tidyverse library.
 ```{r}
 library(tidyverse)
 ```
+Load in glass data with a comma deliminator and add appropiate column names.
+```{r}
+glass_data <- read_delim("https://www4.stat.ncsu.edu/online/datasets/glass.data", delim = ",", col_names = c("Id", "RI","Na", "Mg","Al","Si","K","Ca","Ba","Fe", "Type_of_glass"))
+glass_data
+```
+Overwrite the Type_of_glass that replaces the number indicator with the description.
+Continuing the chain, keeping only the observations where the Fe is less than 0.2 and Type_of_glass is "tableware" or "headlamps".
+```{r}
+glass_data |>
+        mutate(Type_of_glass =
+            ifelse(Type_of_glass == 1,"building_windows_float_processed",
+                  ifelse(Type_of_glass == 2,
+                         "building_windows_non_float_processed",
+                        ifelse(Type_of_glass == 3, 
+                               "vehicle_windows_float_processed",
+                            ifelse(Type_of_glass == 4,
+                                   "vehicle_windows_non_float_processed",
+                                   ifelse(Type_of_glass == 5, 
+                                          "containers",
+                                          ifelse(Type_of_glass == 6,
+                                                 "tableware",
+                                                 ifelse(Type_of_glass == 7,
+                                                        "headlamps","error")
+                                                 ))))))) |>
+  filter(Fe < 0.2 & Type_of_glass == c("tableware", "headlamps"))
+
+```
 
 First row of data to inspect  
 ADT1_YEAST 0.58 0.61 0.47 0.13 0.50 0.00 0.48 0.22 MIT
